<resources>
	
	<string name="operator_or"> or </string>

    <string name="app_name">TruePrice</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher" translatable="false">Launcher</string>
    <string name="button_label_calculate" translatable="false">Calc</string>
    <string name="button_label_run_list" translatable="false">Run List</string>
    <string name="button_label_sync" translatable="false">Sync</string>
    <string name="button_label_login" translatable="false">Login</string>
    <string name="link_label_webapp" translatable="false">T$P.net</string>
    <string name="link_webapp" translatable="false">www.trueprice.net</string>
    <string name="action_about">About TruePrice</string>
    <string name="title_activity_menu_handler" translatable="false">MenuHandler</string>
    <string name="title_activity_run_liste">Run Liste</string>
    
    <string name="one_more_time">Press it one more time to go on</string>
    <string name="email_to_clipboard">This Email was sent to cpliboard</string>


    <string name="launcher_login_status_on">Connected</string>
    <string name="launcher_login_status_off">Disconnected</string>

    <!--
    <string name=""></string>
    -->


</resources>
